# pytest-httpserver

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  CONTRIBUTION.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  example.py  example_pytest.py  flake.nix  mypy.ini  pyproject.toml  pytest.ini  release_checklist.md  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  shell.nix  tox.ini  tox.nix
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  dependabot-validate.yml
doc/: Makefile  api.rst  background.rst  changes.rst  conf.py  fixtures.rst  guide.rst  howto.rst  index.rst  modules.rst  patch.py  pytest_httpserver.rst  tutorial.rst  upgrade.rst
pytest_httpserver/: __init__.py  bake.py  blocking_http_server.py  blocking_httpserver.py  hooks.py  httpserver.py  pytest_plugin.py
releasenotes/notes/: additional-type-hints-improvements-b595896ca71b3537.yaml  blocking-httpserver-3b58e2a8464b4d97.yaml  build-minor-fixes-32955967c5948adc.yaml  daemon-thread-dc78e80bd74289dc.yaml  deprecation-warnings-for-1.0.0-b2b3909e5ad97594.yaml  environment-variables-8717eb8f545a8d3d.yaml  ephemeral-port-support-adea94cb8f6088c6.yaml  fix-16-query-string-c989bee73733a325.yaml  fix-log-leak-ee94a826d75173f1.yaml  fix-packaging-include-673c0b51ebdcd9a2.yaml  fix-release-7c7eae1ad2f68639.yaml  fix-test_verify_assert_msg-af37678f187bb8da.yaml  fix-x509-test-assets-8a1b220d085a504a.yaml  flake8-version-update-d70b88d9a15a723f.yaml  header-value-matcher-5b32c6640aef71d8.yaml  headervaluematcher-type-hinting-fix-f19e7a4d48b0a1d8.yaml  hooks-306915ded3b2771f.yaml  http-methods-are-case-insensitive-c2a1d49f9809f263.yaml  httpserver-listen-address-fixture-87f18b2cdbf47532.yaml  improved-error-reporting-in-custom-request-handlers-df479afb8eae03d1.yaml  initial-ef17767ee807ab89.yaml  json-matcher-1d030e3b4f9b66bd.yaml  log-querying-683219f3587d2139.yaml  minor-fixes-496615d00d2b3e44.yaml  mypy-fix-for-headervaluematcher-fba16bfa9dc3e0e4.yaml  new-expect-method-4f8d071c78c9884b.yaml  new-fixture-for-httpserver-making-98afa235d3283831.yaml  new-fixture-for-ssl-context-054da072a46e9e62.yaml  no-handler-status-code-380fa02ebe9b2721.yaml  nohandler-response-details-2af020f4763fcea8.yaml  poetry-5c16af5ed108ba9c.yaml  pytest-httpserver-listen-address-scope-change-0c1aa457e20cae83.yaml  python-34-35-deprecation-a4a3b57d1f2875d7.yaml  python-37-deprecation-72029b78e91d6b26.yaml  python-38-deprecation-48b0c8be245f63d1.yaml  python-39-deprecation-4098f0a0ef201ad2.yaml  python-classifier-fix-bfe43601d16f27d8.yaml  query-matcher-751db32b2ac1fc74.yaml  re-release-107-23f0fd429612b470.yaml  readiness-1cda7fef501cebd8.yaml  (+16 more)
scripts/: release.py
tests/: conftest.py  test_bake.py  test_blocking_http_server.py  test_blocking_httpserver.py  test_blocking_httpserver_howto.py  test_calls_recording.py  test_extra_options.py  test_handler_errors.py  test_headers.py  test_hooks.py  test_ip_protocols.py  test_json_matcher.py  test_log_leak.py  test_log_querying.py  test_matcher.py  test_mixed.py  test_multi.py  test_oneshot.py  test_options.py  test_ordered.py  test_parse_qs.py  test_permanent.py  test_port_changing.py  test_proxy.py  test_querymatcher.py  test_querystring.py  test_readiness.py  test_release.py  test_server.py  test_server_startup.py  test_ssl.py  test_thread_type.py  test_threaded.py  test_urimatch.py  test_wait.py  test_with_statement.py
tests/assets/: Makefile  README  rootCA.cnf  rootCA.crt  rootCA.key  rootCA.srl  server.cnf  server.crt  server.csr  server.key
tests/examples/: test_example_blocking_httpserver.py  test_example_query_params1.py  test_example_query_params2.py  test_howto_authorization_headers.py  test_howto_bake.py  test_howto_case_insensitive_matcher.py  test_howto_check.py  test_howto_check_handler_errors.py  test_howto_custom_handler.py  test_howto_custom_hooks.py  test_howto_custom_request_matcher.py  test_howto_header_value_matcher.py  test_howto_hooks.py  test_howto_json_matcher.py  test_howto_log_querying.py  test_howto_query_params_dict.py  test_howto_query_params_never_do_this.py  test_howto_query_params_proper_use.py  test_howto_readiness.py  test_howto_regexp.py  test_howto_timeout_requests.py  test_howto_url_matcher.py  test_howto_wait_success.py
