[project]
name = "pytest_httpserver"
version = "1.1.3"
description = "pytest-httpserver is a httpserver for pytest"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Zsolt Cserna", email = "cserna.zsolt@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pytest",
]
requires-python = ">=3.10"
dependencies = [
    "Werkzeug >= 2.0.0",
]

[project.urls]
Homepage = "https://github.com/csernazs/pytest-httpserver"
Documentation = "https://pytest-httpserver.readthedocs.io/en/latest/"
Repository = "https://github.com/csernazs/pytest-httpserver"
"Bug Tracker" = "https://github.com/csernazs/pytest-httpserver/issues"

[project.entry-points.pytest11]
pytest_httpserver = "pytest_httpserver.pytest_plugin"

[tool.poetry]
include = [
    { path = "tests", format = "sdist" },
    { path = "CHANGES.rst", format = "sdist" },
    { path = "CONTRIBUTION.md", format = "sdist" },
    { path = "example*.py", format = "sdist" },
    { path = "doc", format = "sdist" },
]

[tool.poetry.group.develop]
optional = true

[tool.poetry.group.develop.dependencies]
pre-commit = ">=2.20,<5.0"
requests = "*"
typing_extensions = { version = ">=4.0", markers = "python_version < '3.11'" }
Sphinx = ">=5.1.1,<8.0.0"
sphinx-rtd-theme = ">=1,<4"
reno = "*"
types-requests = "*"
pytest = ">=7.1.3,<9.0.0"
pytest-cov = ">=3,<8"
coverage = ">=6.4.4,<8.0.0"
tomli = { version = "*", markers = "python_version < '3.11'"}
black = "*"
ruff = "*"
mypy = "*"


[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
Sphinx = ">=5.1.1,<8.0.0"
sphinx-rtd-theme = ">=1,<4"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
coverage = "*"
requests = "*"
types-requests = "*"
pre-commit = "*"
tomli = { version = "*", markers = "python_version < '3.11'"}
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "ssl: set up ssl context",
    "release: run release tests",
]

[tool.mypy]
files = ["pytest_httpserver", "scripts", "tests"]
implicit_reexport = false


[tool.black]
line-length = 120
safe = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
  "I",
  "D",

  "ANN",
  "ARG005",
  "B011",
  "B904",
  "C408",
  "C901",
  "COM812",
  "EM101",
  "EM103",
  "FBT002",
  "FIX002",
  "INP001",
  "PGH003",
  "PLR0912",
  "PLR0913",
  "PLR2004",
  "PLW2901",
  "PT012",
  "PT013",
  "PTH118",
  "PTH120",
  "RET504",
  "RET505",
  "RET506",
  "RUF005",
  "S101",
  "S113",
  "S603",
  "S607",
  "SIM108",
  "T201",
  "TD002",
  "TD003",
  "TRY003",
  "UP032",
]
line-length = 120
target-version = "py310"
exclude = ["doc", "example*.py", "tests/examples/*.py"]
